--- a/Pages/Admin/ViewAllRequests.cshtml
+++ b/Pages/Admin/ViewAllRequests.cshtml
@@ -251,8 +251,8 @@
     }
 
     .requests-table-head {
-        background-color: #4A6F47;
-        color: #F9F8F3;
+        background-color: #F5F5F5;
+        color: #000000;
     }
 
     .requests-th {
@@ -260,7 +260,7 @@
         font-size: 0.8rem;
         text-transform: uppercase;
         letter-spacing: 0.08em;
-        color: #F9F8F3;
+        color: #000000;
     }
 
     .requests-table tbody tr:nth-child(even) {
@@ -336,5 +336,15 @@
         background-color: #E7E5D8;
         color: #7B7B7B;
         font-size: 1.8rem;
+    }
+
+    /* DataTables length menu (Show entries) */
+    .dataTables_length,
+    .dataTables_length label {
+        padding-left: 1rem;
+    }
+
+    .dataTables_length label {
+        margin-bottom: 0;
     }
 </style>
